# vaultwatch

./: .env.example  .gitignore  ARCHITECTURE_COMPLIANCE.md  BLUEPRINT_VERIFICATION.md  CODE_OF_CONDUCT.md  COMPLIANCE_SUMMARY.txt  CONTRACT_AUDIT.md  CONTRIBUTING.md  CSPR_CLICK_AGENT_SKILL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  JUDGE_VERIFICATION_GUIDE.md  LICENSE  README.md  REAL_PROOF_PLAN.md  REAL_PROOF_SUMMARY.txt  SECURITY.md  SIMPLE_EXPLANATION.md  SUBMISSION_SUMMARY.txt  YOUTUBE_COPY_READY.md  YOUTUBE_TITLE_AND_DESCRIPTION.txt  YOUTUBE_UPLOAD_GUIDE.md  apply-final-round-fix.sh  casper_client.py  deploy_hashes.json  deploy_hashes_live.json  docker-compose.yml  merge-to-main.sh  package-lock.json  package.json  pipeline.py  requirements.txt  ruff.toml  task.md  vaultwatch-final-round-fix.patch  worklog.md
.github/: dependabot.yml
agents/: __init__.py  agent_wallet.py  ai_providers.py  anomaly_agent.py  audit_agent.py  intel_agent.py  policy_reader.py  reputation.py  rwa_agent.py  safety_guard.py  scanner_agent.py  self_correction_agent.py
api/: casper_rpc.py  main.py  security.py
contracts/: Cargo.toml  Odra.toml  rust-toolchain  task.md
contracts/.cargo/: config.toml
contracts/src/: agent_behavior_index.rs  audit_trail.rs  lib.rs  rbac.rs  risk_oracle.rs  risk_policy_manager.rs  risk_policy_manager_v2.rs  sentinel_alert_log.rs  sentinel_credit.rs  sentinel_registry.rs  subscriber_vault.rs
contracts/wasm/: AgentBehaviorIndex.wasm  AuditTrail.wasm  RiskOracle.wasm  RiskPolicyManager.wasm  RiskPolicyManagerV2.wasm  SentinelAlertLog.wasm  SentinelCredit.wasm  SentinelRegistry.wasm  SubscriberVault.wasm
dashboard/: index.html  package-lock.json  package.json  vite.config.js
demo/: README.md  assemble_video.py  build_v2.py  build_video.py  capture_screens.py  concat_list.txt  current_transcript.txt  narration_v3.txt  rec_anomaly.webm  rec_chainstatus.webm  rec_dashboard_full.webm  rec_livefeed.webm  rec_risk_intel.webm  record_testnet.py  script_v2.txt  script_v3.txt  task.md  terminal_session.sh  voiceover_script.txt
deploys/: AgentBehaviorIndex_deploy.json  AuditTrail_deploy.json  RiskOracle_deploy.json  RiskPolicyManager_deploy.json  SentinelAlertLog_deploy.json  SentinelCredit_deploy.json  (+2 more)
sdk/: setup.py
(+180 files in other folders)
