[package]
name = "vaultwatch-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
odra = "2.8.0"

[build-dependencies]
odra-build = "2.8.0"

[dev-dependencies]
odra-test = "2.8.0"

[[bin]]
name = "vaultwatch_contracts_build_contract"
path = "bin/build_contract.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
